@@ -1,3 +1,7 @@
 include $(top_srcdir)/Makefile.decl
 
+noinst_PROGRAMS = $(TEST_PROGS)
+
+TEST_PROGS+=double-free
+double_free_SOURCES=double-free.c
 
